--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="군산여고 세계 책의 날 도서관 탈출" />
+    <meta property="og:title" content="세계 책의 날 도서관 탈출" />
     <meta property="og:description" content="단서를 찾아 도서관을 탈출하세요" />
     <meta property="og:image" content="lib.jpg" />
 
@@ -31,7 +31,7 @@
             </div>
             <div id="already-modal" class="already-modal">
                 <div class="already-modal-content">
-                    이미 찾은 아이템입니다. 인벤토리를 확인하세요.
+                    이미 찾은 아이템입니다.<br>소지품을 확인하세요.
                 </div>
             </div>
             <div class="outputbox">세계 책과 저작권의 날 기념<br>도서관 탈출에 오신 것을 환영합니다.<br><br>시작하시려면 '시작'를 입력하세요.</div>
@@ -40,7 +40,7 @@
             <div class="button-container">
                 <button class="button">입력</button>
                 <button type="button" class="ivnopen-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    인벤토리
+                    소지품
                 </button>
                 
             </div>             
@@ -78,8 +78,7 @@
 
         <div id="finditem-modal" class="finditem-modal">
             <div class="finditem-modal-content">
-            아이템을 찾았습니다!<br>인벤토리를 확인하세요
-            <button id="finditem-modal-close">닫기</button>
+            아이템을 찾았습니다!<br>소지품을 확인하세요<br><button id="finditem-modal-close">닫기</button>
             </div>
         </div>
         <script src="script.js"></script>    
