--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     이미 찾은 아이템입니다.<br>소지품을 확인하세요.
                 </div>
             </div>
-            <div class="outputbox">세계 책과 저작권의 날 기념<br>도서관 탈출에 오신 것을 환영합니다.<br><br>시작하시려면 '시작'를 입력하세요.</div>
+            <div class="outputbox">세계 책과 저작권의 날 기념<br>도서관 탈출에 오신 것을 환영합니다.<br><br><div>시작하시려면 <span class="pp">'시작'</span>을 입력하세요.</div></div>
 
             <input type="text" class="inputbox" placeholder="키워드를 입력하세요">
             <div class="button-container">
