--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         crossorigin="anonymous"></script>
 
 
-    <title>Document</title>
+    <title>세계 책의 날 도서관 탈출</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
